--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,7 @@
     <color name="separator_color">#CCD1D9</color>
     <color name="edit_text_color">#61000000</color>
     <color name="base_dark">#717D8B</color>
+    <color name="thick_green">#09BD5F</color>
+    <color name="thick_grey">#555353</color>
 
 </resources>
