--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -158,6 +158,18 @@
                 android:textStyle="bold"
                 android:visibility="visible" />
 
+            <TextView
+                android:id="@+id/originalAmountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@drawable/strike_through_bold"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="invisible" />
+
         </LinearLayout>
 
         <TextView
