--- a/app/src/main/res/layout/cart_products_list_item.xml
+++ b/app/src/main/res/layout/cart_products_list_item.xml
@@ -103,17 +103,18 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_28sdp"
                         android:layout_alignParentLeft="true"
                         android:orientation="horizontal"
-                        android:visibility="gone">
+                        android:gravity="bottom"
+                        android:visibility="visible">
 
                         <TextView
+                            android:id="@+id/offerTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1 Offer Available >"
-                            android:textColor="@color/green"
-                            android:textSize="@dimen/_10sdp"
+                            android:textColor="@color/red"
+                            android:textSize="@dimen/_8sdp"
                             app:fontFamily="@font/roboto_medium" />
 
                     </LinearLayout>
