--- a/app/src/main/res/layout/category_products_list_item.xml
+++ b/app/src/main/res/layout/category_products_list_item.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,199 +21,201 @@
         android:paddingRight="@dimen/_5sdp"
         android:paddingBottom="@dimen/_6sdp">
 
-        <ImageView
-            android:id="@+id/productImageView"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp"
-            android:layout_centerInParent="true"
-            android:padding="@dimen/_5sdp"
-            android:scaleType="fitXY"
-            android:src="#989898" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_6sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/productNameTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="2"
-                android:paddingLeft="@dimen/_3sdp"
-                android:text="Freedom Refined Sunflower"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_11sdp" />
-
-            <!--<RelativeLayout
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/item_border">
-
-                <ImageView
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/_4sdp"
-                    android:padding="@dimen/_5sdp"
-                    android:rotation="90"
-                    android:src="@drawable/ic_arrow" />
-
-            </RelativeLayout>-->
-
-            <RelativeLayout
-                android:id="@+id/optionsLayout"
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/item_border">
-
-                <Spinner
-                    android:id="@+id/optionsSpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_25sdp"
-                    android:padding="@dimen/_5sdp" />
-
-            </RelativeLayout>
+            <ImageView
+                android:id="@+id/productImageView"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:padding="@dimen/_5sdp"
+                android:scaleType="fitXY"
+                android:src="#989898" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:layout_marginLeft="@dimen/_6sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_toRightOf="@+id/productImageView"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/productNameTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:paddingLeft="@dimen/_3sdp"
+                    android:text="Freedom Refined Sunflower"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11sdp" />
+
+                <!--<RelativeLayout
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/item_border">
+
+                    <ImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_25sdp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/_4sdp"
+                        android:padding="@dimen/_5sdp"
+                        android:rotation="90"
+                        android:src="@drawable/ic_arrow" />
+
+                </RelativeLayout>-->
+
+                <RelativeLayout
+                    android:id="@+id/optionsLayout"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/item_border">
+
+                    <Spinner
+                        android:id="@+id/optionsSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_25sdp"
+                        android:padding="@dimen/_5sdp" />
+
+                </RelativeLayout>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.55"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/costTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/strike_through"
-                        android:gravity="center|right"
-                        android:text="MRP ₹ XXX"
-                        android:textSize="@dimen/_9sdp"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/offerCostTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_3sdp"
-                        android:gravity="left|center_vertical"
-                        android:text="Rs. 550"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_11sdp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/_7sdp"
-                    android:layout_weight="0.45"
-                    android:gravity="right"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:weightSum="1">
 
-                    <RelativeLayout
-                        android:id="@+id/cartAddLayout"
+                    <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.7"
-                        android:background="@drawable/item_border_green"
-                        android:visibility="visible">
+                        android:layout_weight="0.55"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/addTextView"
-                            android:layout_width="match_parent"
+                            android:id="@+id/costTextView"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_alignParentLeft="true"
-                            android:layout_marginStart="0dp"
-                            android:layout_marginLeft="0dp"
-                            android:fontFamily="@font/quicksand_medium"
-                            android:gravity="center"
-                            android:paddingTop="@dimen/_4sdp"
-                            android:paddingBottom="@dimen/_4sdp"
-                            android:text="ADD"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_10sdp"
+                            android:background="@drawable/strike_through"
+                            android:gravity="center|right"
+                            android:text="MRP ₹ XXX"
+                            android:textSize="@dimen/_9sdp"
                             android:visibility="visible" />
 
                         <TextView
+                            android:id="@+id/offerCostTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginTop="@dimen/_1sdp"
-                            android:layout_marginRight="@dimen/_3sdp"
-                            android:text="+"
-                            android:textColor="@color/green"
-                            android:textSize="@dimen/_7sdp"></TextView>
+                            android:layout_marginTop="@dimen/_3sdp"
+                            android:gravity="left|center_vertical"
+                            android:text="Rs. 550"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_11sdp" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/cartCountLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_25sdp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/item_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_7sdp"
+                        android:layout_weight="0.45"
+                        android:gravity="right"
                         android:orientation="horizontal"
-                        android:visibility="gone">
+                        android:weightSum="1">
 
-                        <TextView
-                            android:id="@+id/minusTextView"
+                        <RelativeLayout
+                            android:id="@+id/cartAddLayout"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.7"
+                            android:background="@drawable/item_border_green"
+                            android:visibility="visible">
+
+                            <TextView
+                                android:id="@+id/addTextView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentLeft="true"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginLeft="0dp"
+                                android:fontFamily="@font/quicksand_medium"
+                                android:gravity="center"
+                                android:paddingTop="@dimen/_4sdp"
+                                android:paddingBottom="@dimen/_4sdp"
+                                android:text="ADD"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_10sdp"
+                                android:visibility="visible" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_marginTop="@dimen/_1sdp"
+                                android:layout_marginRight="@dimen/_3sdp"
+                                android:text="+"
+                                android:textColor="@color/green"
+                                android:textSize="@dimen/_7sdp"></TextView>
+
+                        </RelativeLayout>
+
+                        <LinearLayout
+                            android:id="@+id/cartCountLayout"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:paddingLeft="@dimen/_10sdp"
-                            android:paddingRight="@dimen/_10sdp"
-                            android:text="-"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_11sdp" />
+                            android:layout_height="@dimen/_25sdp"
+                            android:layout_gravity="center"
+                            android:background="@drawable/item_border"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
 
-                        <View
-                            android:layout_width="@dimen/_1sdp"
-                            android:layout_height="match_parent"
-                            android:background="#cccccc"></View>
+                            <TextView
+                                android:id="@+id/minusTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:paddingLeft="@dimen/_10sdp"
+                                android:paddingRight="@dimen/_10sdp"
+                                android:text="-"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_11sdp" />
 
-                        <TextView
-                            android:id="@+id/countTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:paddingLeft="@dimen/_7sdp"
-                            android:paddingRight="@dimen/_7sdp"
-                            android:text="1"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_12sdp" />
+                            <View
+                                android:layout_width="@dimen/_1sdp"
+                                android:layout_height="match_parent"
+                                android:background="#cccccc"></View>
 
-                        <View
-                            android:layout_width="@dimen/_1sdp"
-                            android:layout_height="match_parent"
-                            android:background="#cccccc"></View>
+                            <TextView
+                                android:id="@+id/countTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:paddingLeft="@dimen/_7sdp"
+                                android:paddingRight="@dimen/_7sdp"
+                                android:text="1"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_12sdp" />
 
-                        <TextView
-                            android:id="@+id/plusTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:paddingLeft="@dimen/_10sdp"
-                            android:paddingRight="@dimen/_10sdp"
-                            android:text="+"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_11sdp" />
+                            <View
+                                android:layout_width="@dimen/_1sdp"
+                                android:layout_height="match_parent"
+                                android:background="#cccccc"></View>
+
+                            <TextView
+                                android:id="@+id/plusTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:paddingLeft="@dimen/_10sdp"
+                                android:paddingRight="@dimen/_10sdp"
+                                android:text="+"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_11sdp" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -221,8 +223,25 @@
 
             </LinearLayout>
 
-        </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/discountLayout"
+                android:layout_width="@dimen/_21sdp"
+                android:layout_height="@dimen/_21sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:background="@drawable/circle_filled_red"
+                android:visibility="gone">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/discountTextView"
+                    android:layout_width="@dimen/_21sdp"
+                    android:layout_height="@dimen/_21sdp"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_7sdp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
 </RelativeLayout>
