--- a/app/src/main/res/layout/payments_item.xml
+++ b/app/src/main/res/layout/payments_item.xml
@@ -9,10 +9,9 @@
     <LinearLayout
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_5sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:gravity="center_vertical"
         android:background="@color/white"
-        android:elevation="@dimen/_1sdp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -30,11 +29,17 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:paddingLeft="@dimen/_6sdp"
+                android:textColor="@color/black"
                 android:text=""
                 android:textSize="@dimen/_12sdp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:background="@color/background_color" />
 
 </LinearLayout>
